--- a/pages/03-Timer/timer.html
+++ b/pages/03-Timer/timer.html
@@ -21,8 +21,8 @@ of Simple CSS Waves-->
 
     <!-- Inside this -->
     <div class="content">
-      <h1>Anniversary Haris & Syarah Countdown</h1>
-      <h1>12 January 2023</h1>
+      <h1>New Year Countdown</h1>
+      <h1>2023</h1>
       <p>(GMT+7, Jakarta, Indonesia)</p>
       <div class="countdown-container">
         <div class="days-c">
